@@ -43,8 +43,8 @@
     }
 
     &:focus {
-      box-shadow: none;
-      outline: none;
+      box-shadow: none !important;
+      outline: none !important;
     }
   }
 
