@@ -35,6 +35,10 @@
     .details {
       align-items: center;
       margin-right: 0.5rem;
+
+      a {
+        display: inline-block;
+      }
     }
 
     &:first-child {
