@@ -5,6 +5,7 @@
     - Create a new issue (optionally) when creating new evidence
   - Tylium:
     - Import CSS manifests from addon
+    - Update focus state outline color
   - Upgraded gems:
     - nokogiri, puma, rails
   - Bugs fixes:
